tests/paczka1/fuzzy1/83139785.err
Error in line 6: G0CZzavNi A712 63,7
Error in line 12: KcCvmjgK S913 94,2
Error in line 17: PLKXscvw3O S288 425,1
Error in line 29: G0CZzavNi S913 79,7
Error in line 27: PLKXscvw3O S913 7,6
